Move ContactRetriever to ServiceRegistry